--- a/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/Kae.XTUML.Tools.Generator.DTDL.csproj
+++ b/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/Kae.XTUML.Tools.Generator.DTDL.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>2.0.0</Version>
     <Authors>Hiroshi Ota</Authors>
     <Company>Knowledge &amp; Experience</Company>
     <PackageProjectUrl>https://github.com/kae-made/dtdl-schema-generator</PackageProjectUrl>
@@ -10,7 +10,16 @@
     <RepositoryUrl>https://github.com/kae-made/dtdl-schema-generator</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <Copyright>Copyright (c) Knowledge &amp; Experience. All rights reserved.</Copyright>
+    <PackageIcon>kae-log-no-chart-128.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\OneDrive\画像\kae-log-no-chart-128.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Kae.Tools.Generator" Version="6.4.0" />
