Updated refering libraries

--- a/DTDLSchemaGeneration/Kae.XTUML.Tools.WpfAppDTDLGenerator/Kae.XTUML.Tools.WpfAppDTDLGenerator.csproj
+++ b/DTDLSchemaGeneration/Kae.XTUML.Tools.WpfAppDTDLGenerator/Kae.XTUML.Tools.WpfAppDTDLGenerator.csproj
@@ -2,14 +2,16 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Kae.Utility.Logging.WPF" Version="1.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="WindowsAPICodePack" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
