--- a/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/Kae.XTUML.Tools.Generator.DTDL.csproj
+++ b/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/Kae.XTUML.Tools.Generator.DTDL.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Version>2.2.0</Version>
+    <TargetFramework>net8.0</TargetFramework>
+    <Version>2.2.1</Version>
     <Authors>Hiroshi Ota</Authors>
     <Company>Knowledge &amp; Experience</Company>
     <PackageProjectUrl>https://github.com/kae-made/dtdl-schema-generator</PackageProjectUrl>
@@ -12,21 +12,26 @@
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Copyright>Copyright (c) Knowledge &amp; Experience. All rights reserved.</Copyright>
     <PackageIcon>kae-log-no-chart-128.png</PackageIcon>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\OneDrive\画像\kae-log-no-chart-128.png">
+    <None Include="..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Kae.Tools.Generator" Version="6.5.0" />
-    <PackageReference Include="System.CodeDom" Version="7.0.0" />
+    <PackageReference Include="Kae.Tools.Generator" Version="6.5.1" />
+    <PackageReference Include="System.CodeDom" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="kae-log-no-chart-128.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
