Pre release for multi byte characters problem

--- a/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/Kae.XTUML.Tools.Generator.DTDL.csproj
+++ b/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/Kae.XTUML.Tools.Generator.DTDL.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Kae.Tools.Generator" Version="6.5.1" />
+    <PackageReference Include="Kae.XTUML.Tools.CIModelResolver" Version="2.3.3-alpha" />
     <PackageReference Include="System.CodeDom" Version="8.0.0" />
   </ItemGroup>
 
